force-app/main/default/objects/GSA_Project_Cost__c/GSA_Project_Cost__c.object-meta.xml
<CustomObject>
    <label>GSA Project Cost</label>
    <nameField>
        <displayFormat>GSA-C-{0000000000}</displayFormat>
        <label>GSA Project Cost Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GSA Project Costs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>