force-app/main/default/objects/GSA_Project_Cost__c/fields/GSA_Project__c.field-meta.xml
<CustomField>
    <fullName>GSA_Project__c</fullName>
    <label>GSA Project</label>
    <referenceTo>GSA_Project__c</referenceTo>
    <relationshipLabel>GSA Project Costs</relationshipLabel>
    <relationshipName>GSA_Project_Costs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>