force-app/main/default/objects/GSA_Project_Cost__c/fields/Oct_FY__c.field-meta.xml
<CustomField>
    <fullName>Oct_FY__c</fullName>
    <label>Oct FY</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Year</valueSetName>
    </valueSet>
</CustomField>