force-app/main/default/objects/GSA_Project_Cost__c/fields/Period_Month__c.field-meta.xml
<CustomField>
    <fullName>Period_Month__c</fullName>
    <formula>MONTH( Period_End_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Period Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>